# SuzuharaAPP

./: .env.dev.example  .env.prod.example  .gitignore  README.html  README.md  SuzuharaAPP-Intro-Styled.pptx  SuzuharaAPP-Intro.pptx  cors.json  cors.xml  cred.json  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  db.py  deps.py  main.py  models.py
backend/app/albums/: routes.py
backend/app/auth/: routes.py
backend/app/home_sections/: routes.py
backend/app/media/: routes.py
backend/app/scripts/: __init__.py  cleanup_orphan_media.py
backend/app/social/: routes.py
backend/app/storage/: base.py  minio_impl.py  s3_impl.py
backend/app/tags/: routes.py
backend/app/utils/: api.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  main.jsx
frontend/src/components/: MediaCard.jsx  MediaTypeToggle.jsx  RequireDeveloper.jsx  SocialPostCard.jsx  VideoPlayer.jsx
frontend/src/hooks/: useAccessRequests.js  useAccounts.js  useAlbums.js  useCategoryMedia.js  useHomeSections.js  useMe.js  useMediaDetail.js  useMediaList.js  useSocial.js
frontend/src/pages/: AlbumDetail.jsx  Albums.jsx  CategoryCollection.jsx  ControlCenter.jsx  Gallery.jsx  Login.jsx  MediaDetail.jsx  SearchResults.jsx  SocialFeed.jsx  SocialPostDetail.jsx  Upload.jsx
infra/: README.md  backend.env.example  backend.prod.env  docker-compose.prod.yml  docker-compose.yml  frontend.env.example  mysql.prod.env  nginx.prod.conf  start-ui.sh
infra/mysql/: init.sql
(+1 files in other folders)
